# DESI_forward_window

./: .gitignore  README.md  pyproject.toml
notebooks/: autocorr_analytical_window.ipynb  autocorr_forward_example.ipynb  autocorr_window_example.ipynb  crosscorr_window_example.ipynb  example_NAM.ipynb  example_forward.ipynb  example_window.ipynb  mesh_vs_catalog.ipynb
scripts/: sharding.py
src/desiforwardwindow/: __init__.py  convenience.py  forward.py  utils.py  window.py
src/desiwinds/: __init__.py  convenience.py  extended_particle_field.py  forward.py  utils.py  window.py
tests/: test_utils.py
